# sm-auto

./: .env.example  .gitignore  .prettierrc  AGENT.md  README.md  check_all_pages.js  check_artifacts.js  compare_ids.js  config.yaml  count_json.js  count_posts.js  eslint.config.mjs  group_monitor.yaml  list_db_posts.js  listings.json  package.json  pages.csv  pyproject.toml  tsconfig.json
.kilo/plans/: 1776553806899-happy-wolf.md  1776753710348-swift-tiger.md
db/diagnostics/: marketplace_health.sql
db/migrations/: 001_initial_schema.sql  002_page_info_enrichment.sql  003_read_views.sql  004_fix_latest_page_posts_view.sql  005_fix_seller_inventory_view.sql  006_marketplace_timestamps.sql  007_marketplace_child_active_flag.sql  008_marketplace_search_results_unique_listing_id.sql  009_facebook_groups.sql  010_facebook_groups_views.sql  011_group_surfaces_constraint.sql  012_group_post_media_unique_index.sql  013_group_registry.sql  014_group_monitor_v2.sql  015_group_provenance.sql
docs/: FACEBOOK_GROUPS_REPORT.md  RESUME.md  architecture.md  configuration.md  crawl_pages_script.md  dom_page_extraction.md  facebook_page_data_guide.md  marketplace_transport_findings.md  output_schemas.md  plan_page_info_enrichment.md  postgres_storage.md  run_scraper.md  selectors_and_queries.md
docs/plans/: 2026-04-29-facebook-groups-scraper.md  2026-05-01-group-monitoring-system.md  2026-05-01-group-scraper-v2-plan.md  2026-05-01-group-scraper-v3-agentic-plan.md
fixtures/dom/: README.md
fixtures/graphql/: README.md  marketplace_listing_fragment.json  marketplace_search_fragment.json  marketplace_seller_fragment.json  timeline_fragment.json
output/: facebook_marketplace_raw_iphone_20260306_022648.jsonl
plans/: cleanup_refactor_action_plan.md  complete_codebase_analysis.md  facebook_page_extraction_fix_plan.md  facebook_page_network_analysis_plan.md  facebook_page_optimization_plan.md  facebook_page_posts_implementation_plan.md  facebook_page_tracking_plan.md  final_merged_review_and_revised_implementation_plan.md
scripts/: .persona_generator_state.json  aggregate_search_results.py  batch_group_search.sh  compute_group_vitality.py  crawl_pages.sh  export_training_data.py  generate_observations.py  generate_persona_training_data.py  group_monitor.sh  list_pages.sh  scrape_and_report.sh  scrape_crontab
sm_auto/: __init__.py
sm_auto/cli/: __init__.py  main.py  profile_commands.py  run_commands.py
sm_auto/config/: __init__.py  default_config.yaml  facebook_selectors.yaml
sm_auto/core/: __init__.py  exceptions.py
sm_auto/core/auth/: __init__.py
sm_auto/core/browser/: __init__.py  driver_factory.py  profile_manager.py  session_manager.py
sm_auto/core/network/: __init__.py  capture_service.py  cdp_interceptor.py  models.py
sm_auto/examples/: __init__.py  facebook_marketplace.py
sm_auto/exploration/facebook-graphql-scraper-puppeteer/: README.md  requirements.txt
sm_auto/exploration/playwright/: README.md  all_unique_keys.json  analysis_report.md  analyze_dom_structure.js  build_page_catalog.js  comprehensive_scraper.js  deep_analyze_post.js  deep_page_data.json  deep_page_data_v2.json  explore_novel_entities.js  explore_reels.js  extract_missed_data.js  extract_tracking_ids.js  facebook_page_scraper.js  (+12 more)
sm_auto/pipelines/: __init__.py
sm_auto/utils/: __init__.py  config.py  delays.py  logger.py  security.py  selectors.py
src/: index.ts
src/browser/: chrome_client.ts  page_session.ts  request_filter.ts  tab_pool.ts
src/capture/: graphql_artifact_summary.ts  graphql_capture.ts  request_metadata.ts  response_registry.ts  route_definition_capture.ts
src/cli/: cleanup.ts  db_prepare.ts  group_monitor.ts  humanized_delay.ts  marketplace_bulk.ts  scrape_group_info.ts  scrape_group_join.ts  scrape_group_post_detail.ts  scrape_group_post_details.ts  scrape_group_posts.ts  scrape_group_search.ts  scrape_marketplace_listing.ts  scrape_marketplace_listings.ts  scrape_marketplace_search.ts  scrape_marketplace_seller.ts  scrape_marketplace_sellers.ts  scrape_page_info.ts  scrape_page_posts.ts  shared.ts  smoke.ts
src/core/: errors.ts  job_runner.ts  llm_decisions.ts  logger.ts  monitor_config.ts  scraper_context.ts  sleep.ts  utils.ts
src/extractors/: group_info_extractor.ts  group_join_extractor.ts  group_post_detail_extractor.ts  group_posts_extractor.ts  group_search_extractor.ts  marketplace_helpers.ts  marketplace_listing_extractor.ts  marketplace_search_extractor.ts  marketplace_seller_extractor.ts  page_info_extractor.ts  page_posts_extractor.ts  page_transparency_extractor.ts
src/normalizers/: group_info_normalizer.ts  group_post_normalizer.ts  marketplace_listing_normalizer.ts  page_normalizer.ts  post_normalizer.ts  seller_normalizer.ts
src/routes/: facebook_routes.ts  marketplace_routes.ts
src/storage/: artifact_writer.ts  json_writer.ts  schema_versions.ts
src/types/: contracts.ts
tests/: __init__.py  conftest.py  core_utils.test.ts  extract_page_info_v3.ts  graphql_parsers.test.ts  humanized_delay.test.ts  llm_simple_test.ts  llm_test_ryans.ts  llm_test_ryans_about.ts  marketplace_bulk.test.ts  marketplace_dom_parser.test.ts  marketplace_helpers.test.ts  marketplace_queue_repository.test.ts  marketplace_repository.test.ts  marketplace_search_extractor.test.ts  page_dom_parser.test.ts  page_info_extractor.test.ts  page_repository.test.ts  page_route_identity.test.ts  parse_facebook_html.py  parser_smoke.test.ts  post_metrics_normalizer.test.ts  post_repository.test.ts  scraper_context.test.ts  shared_graphql_utils.test.ts  storage_utils.test.ts  structure.test.ts  test_cli.py  test_delays.py  test_exceptions.py  test_extractor_fixes.py  test_facebook_authenticated.py  test_facebook_comprehensive.py  test_marketplace_models.py  test_marketplace_parser.py  test_mongodb_indexes.py  test_network_interception.py  test_new_extractor.py  test_profile_manager.py  test_raw_response_saving.py  (+2 more)
tests/fixtures/: ihubmobiles_full.txt  ihubmobiles_fullpage.html  ihubmobiles_more.txt  ihubmobiles_raw.txt  ryanscomputers_fullpage.html  ryanscomputers_raw.txt
(+44 files in other folders)
